multiline string used